restyled home page exercises to fix layout issue if edit and elete buttons appear. added custom css to bring fab button infront of image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,3 +22,14 @@ main {
 .page-footer-row {
     margin-bottom: 0px;;
 }
+
+/* card and fab z index fix */
+
+.card.medium .card-image {
+  max-height: 40%;
+  overflow: inherit;
+}
+
+.card-image{
+  min-height: 200px;
+}
